--- a/1-redis-deployment.yaml
+++ b/1-redis-deployment.yaml
@@ -14,9 +14,18 @@ spec:
       labels:
         app: redis
     spec:
+      volumes:
+      - name: redis-config-volume
+        configMap:
+          name: redis-config
       containers:
       - image: redis:6.2.3-alpine
         name: redis
+        command: [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
+        volumeMounts:
+        - name: redis-config-volume
+          mountPath: /usr/local/etc/redis
+
         livenessProbe:
             exec:
               command:
